namespace DeShawnsDogWalking.Models;
public class Breed 
{
    public int Id { get; set; }
    public string Type { get; set; }
}