namespace DeShawnsDogWalking.Models;
public class City
{
    public int Id { get; set; }
    public string Name { get; set; }
}