namespace DeShawnsDogWalking.Models;

public class WalkerCity
{
    public int Id { get; set; }
    public int WalkerId { get; set; }
    public int CityId { get; set; }
}