namespace DeShawnsDogWalking.Models;

public class Walker
{
    public int Id { get; set; }
    public string Name { get; set; }
    public Dog Dogs { get; set; }
}